[gd_scene load_steps=8 format=3 uid="uid://d3yoetcxf60fa"]

[ext_resource type="Script" uid="uid://deixqvuipu7a1" path="res://scenes/gun.gd" id="1_x77fm"]
[ext_resource type="AudioStream" uid="uid://ce580dmd32cbe" path="res://sounds/8bit_gunloop_explosion.wav" id="2_og67c"]
[ext_resource type="AudioStream" uid="uid://bdlpbjy7kryqo" path="res://sounds/clipload1.wav" id="3_gp1hk"]
[ext_resource type="AudioStream" uid="uid://c68xuyexf7e66" path="res://sounds/dry.wav" id="4_qd4js"]

[sub_resource type="Animation" id="Animation_haq8l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 0)]
}

[sub_resource type="Animation" id="Animation_6b133"]
resource_name = "shoot"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1.0352648, 1),
"update": 0,
"values": [Vector2(-4, 0), Vector2(3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bmp1f"]
_data = {
&"RESET": SubResource("Animation_haq8l"),
&"shoot": SubResource("Animation_6b133")
}

[node name="Gun" type="Sprite2D"]
show_behind_parent = true
position = Vector2(0, -2.9802322e-08)
scale = Vector2(0.059247047, 0.053125)
offset = Vector2(3, 0)
script = ExtResource("1_x77fm")
metadata/_edit_vertical_guides_ = [-63.0]

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(23.199999, -6)

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_og67c")

[node name="Reload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gp1hk")

[node name="Dry" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qd4js")

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ReloadTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bmp1f")
}

[connection signal="timeout" from="ReloadTime" to="." method="_on_reload_time_timeout"]
